Jann 30/objects/Report_Request__c.object
<CustomObject>
    <fields>
        <fullName>Conga_URL_String__c</fullName>
        <label>Conga URL String</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OFN__c</fullName>
        <label>Output Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Header__c</fullName>
        <label>Report Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Subtitle__c</fullName>
        <label>Report Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_2_End__c</fullName>
        <label>Reporting Period 2 End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_2_Start__c</fullName>
        <label>Reporting Period 2 Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_End__c</fullName>
        <label>Reporting Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Start__c</fullName>
        <label>Reporting Period Start</label>
        <type>Date</type>
    </fields>
    <label>Report Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Conga_URL_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Report Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>